uploader-develop-sifopsci/sifopsci/ansible/rancher/testpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: volume-test
  namespace: default
spec:
  #nodeName: "10.11.20.24"
  restartPolicy: Always
  containers:
  - name: volume-test
    image: alpine:latest
    imagePullPolicy: IfNotPresent
    livenessProbe:
      exec:
        command:
          - ls
          - /data/lost+found
      initialDelaySeconds: 5
      periodSeconds: 5
    volumeMounts:
    - name: volv
      mountPath: /data
    ports:
    - containerPort: 80
  volumes:
  - name: volv
    persistentVolumeClaim:
      claimName: longhorn-volv-pvc
