uploader-develop-sifopsci/sifopsci/ansible/rancher/ingress-harbor.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  labels:
    app.kubernetes.io/name: harbor
    helm.sh/chart: harbor-11.1.6
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/managed-by: Helm
  annotations:
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - secretName: harbor-ingress
      hosts:
        - harbor.hadith.ma
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: harbor-portal
                port:
                  name: http
          - path: /api/
            pathType: ImplementationSpecific
            backend:
              service:
                name: harbor-core
                port:
                  name: http
          - path: /service/
            pathType: ImplementationSpecific
            backend:
              service:
                name: harbor-core
                port:
                  name: http
          - path: /v2
            pathType: ImplementationSpecific
            backend:
              service:
                name: harbor-core
                port:
                  name: http
          - path: /chartrepo/
            pathType: ImplementationSpecific
            backend:
              service:
                name: harbor-core
                port:
                  name: http
          - path: /c/
            pathType: ImplementationSpecific
            backend:
              service:
                name: harbor-core
                port:
                  name: http
      host: harbor.hadith.ma
